--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
 
 <body class="page">
 
-    <!-- <header class="header">
-        <img class="header__image" src="" alt="">
-    </header>
+  <header class="header">
+    <img class="header__image" src="./images/logo__image.svg" alt="Место Россия">
+  </header>
 
-    <main class="">
+  <!-- <main class="">
 
-      <section class="">
-      </section> 
+    <section class="">
+    </section> 
 
-    </main> 
+  </main> 
 
-    <footer class="footer">
-      <p class="footer__copyright">&copy;&nbsp;2022. Анастасия Поваркова</p>
-    </footer> -->
+  <footer class="footer">
+    <p class="footer__copyright">&copy;&nbsp;2022. Анастасия Поваркова</p>
+  </footer> -->
 
 </body>
 
