--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     <section class="">
     </section> 
 
-  </main> 
+  </main>  -->
 
   <footer class="footer">
-    <p class="footer__copyright">&copy;&nbsp;2022. Анастасия Поваркова</p>
-  </footer> -->
+    <p class="footer__copyright">&copy;&nbsp;2022 Mesto Russia</p>
+  </footer> 
 
 </body>
 
