Разметка для main

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <img class="header__image" src="./images/logo__image.svg" alt="Место Россия">
   </header>
 
-  <!-- <main class="">
+  <main class="content">
 
     <section class="">
     </section> 
 
-  </main>  -->
+  </main> 
 
   <footer class="footer">
     <p class="footer__copyright">&copy;&nbsp;2022 Mesto Russia</p>
