--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
 
   <main class="content">
 
-    <section class="">
+    <section class="profile">
+      <img class="profile__avatar" src="./images/profile__avatar.jpg">
+      <div class="profile__info">
+        <h1 class="profile__name">Жак-Ив Кусто<img class="profile__editButton" src="./images/EditButton.svg"></h1>
+        <p class="profile__profession">Исследователь океана</p>
+      </div>
+      <img class="profile__addButton" src="./images/AddButton.svg">
     </section> 
 
   </main> 
