--- a/index.html
+++ b/index.html
@@ -76,6 +76,18 @@
     <p class="footer__copyright">&copy;&nbsp;2022 Mesto Russia</p>
   </footer> 
 
+  <section class="popup">
+    <button class="popup__close"></button>
+    <div class="popup__container">
+      <div class="popup__content">
+        <h2 class="popup__title">Редактировать профиль</h2>
+        <input type="text" class="popup__name" name="name" value="Жак-Ив Кусто">
+        <input type="text" class="popup__profession" name="profession" value="Исследователь океана">
+        <button class="popup__submit"></button>
+      </div>
+    </div>
+  </section>
+
 </body>
 
 </html> 
