Добавить hover и active кнопкам

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <section class="profile">
       <img class="profile__avatar" src="./images/profile__avatar.jpg">
       <div class="profile__info">
-        <h1 class="profile__name">Жак-Ив Кусто<img class="profile__editButton" src="./images/EditButton.svg"></h1>
+        <h1 class="profile__name">Жак-Ив Кусто<button class="profile__editButton"></button></h1>
         <p class="profile__profession">Исследователь океана</p>
       </div>
       <button class="profile__addButton"></button>
@@ -30,42 +30,42 @@
         <img class="element__image" src="./images/Element__image1.png" alt="Карачаевск">
         <div class="element__group">
           <p class="element__text">Карачаевск</p>
-          <img class="element__like" src="./images/Element__like.svg" alt="like">
+          <button class="element__like"></button>
         </div>
       </div>
       <div class="element">
         <img class="element__image" src="./images/Element__image2.png" alt="Гора Эльбрус">
         <div class="element__group">
           <p class="element__text">Гора Эльбрус</p>
-          <img class="element__like" src="./images/Element__like.svg" alt="like">
+          <button class="element__like"></button>
         </div>
       </div>
       <div class="element">
         <img class="element__image" src="./images/Element__image3.png" alt="Домбай">
         <div class="element__group">
           <p class="element__text">Домбай</p>
-          <img class="element__like" src="./images/Element__like.svg" alt="like">
+          <button class="element__like"></button>
         </div>
       </div>
       <div class="element">
         <img class="element__image" src="./images/Element__image2.png" alt="Гора Эльбрус">
         <div class="element__group">
           <p class="element__text">Гора Эльбрус</p>
-          <img class="element__like" src="./images/Element__like.svg" alt="like">
+          <button class="element__like"></button>
         </div>
       </div>
       <div class="element">
         <img class="element__image" src="./images/Element__image3.png" alt="Домбай">
         <div class="element__group">
           <p class="element__text">Домбай</p>
-          <img class="element__like" src="./images/Element__like.svg" alt="like">
+          <button class="element__like"></button>
         </div>
       </div>
       <div class="element">
         <img class="element__image" src="./images/Element__image1.png" alt="Карачаево-Черкессия">
         <div class="element__group">
           <p class="element__text">Карачаево-Черкессия</p>
-          <img class="element__like" src="./images/Element__like.svg" alt="like">
+          <button class="element__like"></button>
         </div>
       </div>
     </section>
