Пофиксить elements, добавить новое место, добавить README

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
         </div>
       </div>
       <div class="element">
-        <img class="element__image" src="./images/Element__image3.png" alt="Домбай">
+        <img class="element__image" src="./images/Element__Kazan.jpg" alt="Казань">
         <div class="element__group">
-          <p class="element__text">Домбай</p>
+          <p class="element__text">Казань</p>
           <button class="element__like"></button>
         </div>
       </div>
