--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <main class="content">
 
     <section class="profile">
-      <img class="profile__avatar" src="./images/profile__avatar.jpg">
+      <img class="profile__avatar" src="./images/profile__avatar.jpg" alt="аватар">
       <div class="profile__info">
         <div class="profile__title">
           <h1 class="profile__name">Жак-Ив Кусто</h1>
