Добавить type для всех button

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
       <div class="profile__info">
         <div class="profile__title">
           <h1 class="profile__name">Жак-Ив Кусто</h1>
-          <button class="profile__editButton"></button>
+          <button type="button" class="profile__editButton"></button>
         </div>
         <p class="profile__profession">Исследователь океана</p>
       </div>
-      <button class="profile__addButton"></button>
+      <button type="button" class="profile__addButton"></button>
     </section> 
 
     <section class="elements">
@@ -33,42 +33,42 @@
         <img class="element__image" src="./images/Element__image1.png" alt="Карачаевск">
         <div class="element__group">
           <p class="element__text">Карачаевск</p>
-          <button class="element__like"></button>
+          <button type="button" class="element__like"></button>
         </div>
       </div>
       <div class="element">
         <img class="element__image" src="./images/Element__image2.png" alt="Гора Эльбрус">
         <div class="element__group">
           <p class="element__text">Гора Эльбрус</p>
-          <button class="element__like"></button>
+          <button type="button" class="element__like"></button>
         </div>
       </div>
       <div class="element">
         <img class="element__image" src="./images/Element__Kazan.jpg" alt="Казань">
         <div class="element__group">
           <p class="element__text">Казань</p>
-          <button class="element__like"></button>
+          <button type="button" class="element__like"></button>
         </div>
       </div>
       <div class="element">
         <img class="element__image" src="./images/Element__image2.png" alt="Гора Эльбрус">
         <div class="element__group">
           <p class="element__text">Гора Эльбрус</p>
-          <button class="element__like"></button>
+          <button type="button" class="element__like"></button>
         </div>
       </div>
       <div class="element">
         <img class="element__image" src="./images/Element__image3.png" alt="Домбай">
         <div class="element__group">
           <p class="element__text">Домбай</p>
-          <button class="element__like"></button>
+          <button type="button" class="element__like"></button>
         </div>
       </div>
       <div class="element">
         <img class="element__image" src="./images/Element__image1.png" alt="Карачаево-Черкессия">
         <div class="element__group">
           <p class="element__text">Карачаево-Черкессия</p>
-          <button class="element__like"></button>
+          <button type="button" class="element__like"></button>
         </div>
       </div>
     </section>
