Исправить названия edit-button и add-button

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
       <div class="profile__info">
         <div class="profile__title">
           <h1 class="profile__name">Жак-Ив Кусто</h1>
-          <button type="button" class="profile__editButton"></button>
+          <button type="button" class="profile__edit-button"></button>
         </div>
         <p class="profile__profession">Исследователь океана</p>
       </div>
-      <button type="button" class="profile__addButton"></button>
+      <button type="button" class="profile__add-button"></button>
     </section> 
 
     <section class="elements">
