Исправить p на h2 в elements

--- a/index.html
+++ b/index.html
@@ -32,42 +32,42 @@
       <div class="element">
         <img class="element__image" src="./images/Element__image1.png" alt="Карачаевск">
         <div class="element__group">
-          <p class="element__text">Карачаевск</p>
+          <h2 class="element__text">Карачаевск</h2>
           <button type="button" class="element__like"></button>
         </div>
       </div>
       <div class="element">
         <img class="element__image" src="./images/Element__image2.png" alt="Гора Эльбрус">
         <div class="element__group">
-          <p class="element__text">Гора Эльбрус</p>
+          <h2 class="element__text">Гора Эльбрус</h2>
           <button type="button" class="element__like"></button>
         </div>
       </div>
       <div class="element">
         <img class="element__image" src="./images/Element__Kazan.jpg" alt="Казань">
         <div class="element__group">
-          <p class="element__text">Казань</p>
+          <h2 class="element__text">Казань</h2>
           <button type="button" class="element__like"></button>
         </div>
       </div>
       <div class="element">
         <img class="element__image" src="./images/Element__image2.png" alt="Гора Эльбрус">
         <div class="element__group">
-          <p class="element__text">Гора Эльбрус</p>
+          <h2 class="element__text">Гора Эльбрус</h2>
           <button type="button" class="element__like"></button>
         </div>
       </div>
       <div class="element">
         <img class="element__image" src="./images/Element__image3.png" alt="Домбай">
         <div class="element__group">
-          <p class="element__text">Домбай</p>
+          <h2 class="element__text">Домбай</h2>
           <button type="button" class="element__like"></button>
         </div>
       </div>
       <div class="element">
         <img class="element__image" src="./images/Element__image1.png" alt="Карачаево-Черкессия">
         <div class="element__group">
-          <p class="element__text">Карачаево-Черкессия</p>
+          <h2 class="element__text">Карачаево-Черкессия</h2>
           <button type="button" class="element__like"></button>
         </div>
       </div>
