--- a/index.html
+++ b/index.html
@@ -79,17 +79,17 @@
     <p class="footer__copyright">&copy;&nbsp;2022 Mesto Russia</p>
   </footer> 
 
-  <section class="popup">
+  <div class="popup">
     <button class="popup__close"></button>
     <div class="popup__container">
-      <form class="popup__content">
+      <form name="popup__content" class="popup__content">
         <h2 class="popup__title">Редактировать профиль</h2>
         <input type="text" class="popup__name" name="name" value="Жак-Ив Кусто">
         <input type="text" class="popup__profession" name="profession" value="Исследователь океана">
-        <input type="submit" class="popup__submit" name="submit" value="Сохранить">
+        <button type="submit" class="popup__submit" name="submit" value="Сохранить">Сохранить</button>
       </form>
     </div>
-  </section>
+  </div>
 
   <script src="./scripts/index.js"></script>
 
