Добавить общие стили для полей формы

--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
     <div class="popup__container">
       <form name="popup__content" class="popup__content">
         <h2 class="popup__title">Редактировать профиль</h2>
-        <input type="text" class="popup__name" name="name" value="Жак-Ив Кусто">
-        <input type="text" class="popup__profession" name="profession" value="Исследователь океана">
+        <input type="text" class="popup__field popup__name" name="name" value="Жак-Ив Кусто">
+        <input type="text" class="popup__field popup__profession" name="profession" value="Исследователь океана">
         <button type="submit" class="popup__submit" name="submit" value="Сохранить">Сохранить</button>
       </form>
     </div>
