Исправить центрирование попапа и задать close button абсолютное позиционирование, убрать высоту попапа

--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
   </footer> 
 
   <div class="popup">
-    <button class="popup__close"></button>
     <div class="popup__container">
+      <button type="button" class="popup__close"></button>
       <form name="popup__content" class="popup__content">
         <h2 class="popup__title">Редактировать профиль</h2>
         <input type="text" class="popup__field popup__name" name="name" value="Жак-Ив Кусто">
