--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
       <div class="profile__info">
         <div class="profile__title">
           <h1 class="profile__name">Жак-Ив Кусто</h1>
-          <button type="button" class="profile__edit-button"></button>
+          <button type="button" aria-label="Edit" class="profile__edit-button"></button>
         </div>
         <p class="profile__profession">Исследователь океана</p>
       </div>
-      <button type="button" class="profile__add-button"></button>
+      <button type="button" aria-label="Add" class="profile__add-button"></button>
     </section> 
 
     <section class="elements">
@@ -33,42 +33,42 @@
         <img class="element__image" src="./images/Element__image1.png" alt="Карачаевск">
         <div class="element__group">
           <h2 class="element__text">Карачаевск</h2>
-          <button type="button" class="element__like"></button>
+          <button type="button" aria-label="Like" class="element__like"></button>
         </div>
       </div>
       <div class="element">
         <img class="element__image" src="./images/Element__image2.png" alt="Гора Эльбрус">
         <div class="element__group">
           <h2 class="element__text">Гора Эльбрус</h2>
-          <button type="button" class="element__like"></button>
+          <button type="button" aria-label="Like" class="element__like"></button>
         </div>
       </div>
       <div class="element">
         <img class="element__image" src="./images/Element__Kazan.jpg" alt="Казань">
         <div class="element__group">
           <h2 class="element__text">Казань</h2>
-          <button type="button" class="element__like"></button>
+          <button type="button" aria-label="Like" class="element__like"></button>
         </div>
       </div>
       <div class="element">
         <img class="element__image" src="./images/Element__image2.png" alt="Гора Эльбрус">
         <div class="element__group">
           <h2 class="element__text">Гора Эльбрус</h2>
-          <button type="button" class="element__like"></button>
+          <button type="button" aria-label="Like" class="element__like"></button>
         </div>
       </div>
       <div class="element">
         <img class="element__image" src="./images/Element__image3.png" alt="Домбай">
         <div class="element__group">
           <h2 class="element__text">Домбай</h2>
-          <button type="button" class="element__like"></button>
+          <button type="button" aria-label="Like" class="element__like"></button>
         </div>
       </div>
       <div class="element">
         <img class="element__image" src="./images/Element__image1.png" alt="Карачаево-Черкессия">
         <div class="element__group">
           <h2 class="element__text">Карачаево-Черкессия</h2>
-          <button type="button" class="element__like"></button>
+          <button type="button" aria-label="Like" class="element__like"></button>
         </div>
       </div>
     </section>
@@ -81,7 +81,7 @@
 
   <div class="popup">
     <div class="popup__container">
-      <button type="button" class="popup__close"></button>
+      <button type="button" aria-label="Close" class="popup__close"></button>
       <form name="popup__content" class="popup__content">
         <h2 class="popup__title">Редактировать профиль</h2>
         <input type="text" class="popup__field popup__name" name="name" value="Жак-Ив Кусто">
