--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
   <template id="element-template">
     <div class="element">
       <img class="element__image" src="./images/Element__image1.png" alt="фото">
+      <button type="button" aria-label="Удалить" class="element__trash"></button>
       <div class="element__group">
         <h2 class="element__text"></h2>
         <button type="button" aria-label="Нравится" class="element__like"></button>
