Открытие попапа при нажатии на картинку

--- a/index.html
+++ b/index.html
@@ -29,48 +29,7 @@
     </section> 
 
     <section class="elements">
-      <!--<div class="element">
-        <img class="element__image" src="./images/Element__image1.png" alt="Карачаевск">
-        <div class="element__group">
-          <h2 class="element__text">Карачаевск</h2>
-          <button type="button" aria-label="Нравится" class="element__like"></button>
-        </div>
-      </div>
-      <div class="element">
-        <img class="element__image" src="./images/Element__image2.png" alt="Гора Эльбрус">
-        <div class="element__group">
-          <h2 class="element__text">Гора Эльбрус</h2>
-          <button type="button" aria-label="Нравится" class="element__like"></button>
-        </div>
-      </div>
-      <div class="element">
-        <img class="element__image" src="./images/Element__Kazan.jpg" alt="Казань">
-        <div class="element__group">
-          <h2 class="element__text">Казань</h2>
-          <button type="button" aria-label="Нравится" class="element__like"></button>
-        </div>
-      </div>
-      <div class="element">
-        <img class="element__image" src="./images/Element__image2.png" alt="Гора Эльбрус">
-        <div class="element__group">
-          <h2 class="element__text">Гора Эльбрус</h2>
-          <button type="button" aria-label="Нравится" class="element__like"></button>
-        </div>
-      </div>
-      <div class="element">
-        <img class="element__image" src="./images/Element__image3.png" alt="Домбай">
-        <div class="element__group">
-          <h2 class="element__text">Домбай</h2>
-          <button type="button" aria-label="Нравится" class="element__like"></button>
-        </div>
-      </div>
-      <div class="element">
-        <img class="element__image" src="./images/Element__image1.png" alt="Карачаево-Черкессия">
-        <div class="element__group">
-          <h2 class="element__text">Карачаево-Черкессия</h2>
-          <button type="button" aria-label="Нравится" class="element__like"></button>
-        </div>
-      </div> -->
+      
     </section> 
 
   </main> 
@@ -111,6 +70,14 @@
         <input type="text" class="popup__field popup__field_input_link" required placeholder="Ссылка на картинку" name="link" value="">
         <button type="submit" class="popup__submit" name="submit" value="Создать">Создать</button>
       </form>
+    </div>
+  </div>
+
+  <div class="popup popup_open-card">
+    <div class="popup__element">
+      <img class="popup__image" src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/chelyabinsk-oblast.jpg" alt="фото">
+      <button type="button" aria-label="Закрыть" class="popup__close"></button>
+      <h2 class="popup__text">Фото</h2>
     </div>
   </div>
 
