Исправлены все комментарии по первому ревью

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <div class="popup popup_edit-profile">
     <div class="popup__container">
       <button type="button" aria-label="Закрыть" class="popup__close"></button>
-      <form name="popup__content" class="popup__content">
+      <form name="popup__profile-content" class="popup__content">
         <h2 class="popup__title">Редактировать профиль</h2>
         <input type="text" class="popup__field popup__field_input_name" required placeholder="Ваше имя" name="name" value="Жак-Ив Кусто">
         <input type="text" class="popup__field popup__field_input_profession" required placeholder="Ваша профессия" name="profession" value="Исследователь океана">
@@ -64,10 +64,10 @@
   <div class="popup popup_add-card">
     <div class="popup__container">
       <button type="button" aria-label="Закрыть" class="popup__close"></button>
-      <form name="popup__content" class="popup__content">
+      <form name="popup__card-content" class="popup__content">
         <h2 class="popup__title">Новое место</h2>
         <input type="text" class="popup__field popup__field_input_card" required placeholder="Название" name="cardName" value="">
-        <input type="text" class="popup__field popup__field_input_link" required placeholder="Ссылка на картинку" name="link" value="">
+        <input type="url" class="popup__field popup__field_input_link" required placeholder="Ссылка на картинку" name="link" value="">
         <button type="submit" class="popup__submit" name="submit" value="Создать">Создать</button>
       </form>
     </div>
@@ -81,6 +81,7 @@
     </div>
   </div>
 
+  <script src="scripts/initial-сards.js"></script>
   <script src="./scripts/index.js"></script>
 
 </body>
