Исправлены все комментарии по первому ревью

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
   <div class="popup popup_open-card">
     <div class="popup__element">
-      <img class="popup__image" src="" alt="фото">
+      <img class="popup__image" src="./images/Element__Kazan.jpg" alt="фото">
       <button type="button" aria-label="Закрыть" class="popup__close"></button>
       <h2 class="popup__text">Фото</h2>
     </div>
