JS close popups when overlay and ESC, some validation

--- a/index.html
+++ b/index.html
@@ -52,10 +52,12 @@
   <div class="popup popup_edit-profile">
     <div class="popup__container">
       <button type="button" aria-label="Закрыть" class="popup__close"></button>
-      <form name="popup__profile-content" class="popup__content">
+      <form name="popup__profile-content" class="popup__content" novalidate>
         <h2 class="popup__title">Редактировать профиль</h2>
-        <input type="text" class="popup__field popup__field_input_name" required placeholder="Ваше имя" name="name" value="Жак-Ив Кусто">
-        <input type="text" class="popup__field popup__field_input_profession" required placeholder="Ваша профессия" name="profession" value="Исследователь океана">
+        <input type="text" id="name-field" class="popup__field popup__field_input_name" minlength="2" maxlength="40" required placeholder="Ваше имя" name="name" value="Жак-Ив Кусто">
+        <span class="name-field-error popup__field-error"></span>
+        <input type="text" id="profession-field" class="popup__field popup__field_input_profession" minlength="2" maxlength="200" required placeholder="Ваша профессия" name="profession" value="Исследователь океана">
+        <span class="profession-field-error popup__field-error"></span>
         <button type="submit" class="popup__submit" name="submit" value="Сохранить">Сохранить</button>
       </form>
     </div>
@@ -64,10 +66,12 @@
   <div class="popup popup_add-card">
     <div class="popup__container">
       <button type="button" aria-label="Закрыть" class="popup__close"></button>
-      <form name="popup__card-content" class="popup__content">
+      <form name="popup__card-content" class="popup__content" novalidate>
         <h2 class="popup__title">Новое место</h2>
-        <input type="text" class="popup__field popup__field_input_card" required placeholder="Название" name="cardName" value="">
-        <input type="url" class="popup__field popup__field_input_link" required placeholder="Ссылка на картинку" name="link" value="">
+        <input type="text" id="card-field" class="popup__field popup__field_input_card" minlength="2" maxlength="30" required placeholder="Название" name="cardName" value="">
+        <span class="card-field-error popup__field-error"></span>
+        <input type="url" id="link-field" class="popup__field popup__field_input_link" required placeholder="Ссылка на картинку" name="link" value="">
+        <span class="link-field-error popup__field-error"></span>
         <button type="submit" class="popup__submit" name="submit" value="Создать">Создать</button>
       </form>
     </div>
