--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
   </div>
 
   <script src="scripts/initial-сards.js"></script>
+  <script src="scripts/validation.js"></script>
   <script src="./scripts/index.js"></script>
 
 </body>
