--- a/index.html
+++ b/index.html
@@ -85,9 +85,10 @@
     </div>
   </div>
 
-  <script src="scripts/initial-сards.js"></script>
-  <script src="scripts/validate.js"></script>
-  <script src="./scripts/index.js"></script>
+  <script src="./scripts/initial-сards.js"></script>
+  <script src="./scripts/validate.js"></script>
+  <script type="module" src="./scripts/index.js"></script>
+  <script type="module" src="./scripts/card.js"></script>
 
 </body>
 
