Создана папка src

--- a/src/index.html
+++ b/src/index.html
@@ -85,10 +85,7 @@
     </div>
   </div>
 
-  <script type="module" src="./scripts/initial-сards.js"></script>
-  <script type="module" src="./scripts/index.js"></script>
-  <script type="module" src="./scripts/card.js"></script>
-  <script type="module" src="./scripts/validate.js"></script>
+  <script type="module" src="./pages/index.js"></script>
 
 </body>
 
