Настроен Webpack полностью

--- a/src/index.html
+++ b/src/index.html
@@ -4,20 +4,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./pages/index.css">
   <title>mesto</title>
 </head>
 
 <body class="page">
 
   <header class="header">
-    <img class="header__image" src="./images/logo__image.svg" alt="Место Россия">
+    <img class="header__image" src="<%=require('./images/logo__image.svg')%>" alt="Место Россия">
   </header>
 
   <main class="content">
 
     <section class="profile">
-      <img class="profile__avatar" src="./images/profile__avatar.jpg" alt="аватар">
+      <img class="profile__avatar" src="<%=require('./images/profile__avatar.jpg')%>" alt="аватар">
       <div class="profile__info">
         <div class="profile__title">
           <h1 class="profile__name">Жак-Ив Кусто</h1>
@@ -85,7 +84,6 @@
     </div>
   </div>
 
-  <script type="module" src="./pages/index.js"></script>
 
 </body>
 
