Исправлены замечания по тестам

--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
   <template id="element-template">
     <div class="element">
       <button type="button" aria-label="Удалить" class="element__trash"></button>
-      <img class="element__image" src="" alt="фото">
+      <img class="element__image" src="https://images.unsplash.com/photo-1502489352690-20d1494ac469?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=715&q=80" alt="фото">
       <div class="element__group">
         <h2 class="element__text"></h2>
         <div class="element__likes">
@@ -96,7 +96,7 @@
 
   <div class="popup popup_open-card">
     <div class="popup__element">
-      <img class="popup__image" src="" alt="фото">
+      <img class="popup__image" src="https://images.unsplash.com/photo-1502489352690-20d1494ac469?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=715&q=80" alt="фото">
       <button type="button" aria-label="Закрыть" class="popup__close"></button>
       <h2 class="popup__text">Фото</h2>
     </div>
