Изменена подпись в футере

--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
   </main> 
 
   <footer class="footer">
-    <p class="footer__copyright">&copy;&nbsp;<script>document.write(new Date().getFullYear())</script> Mesto Russia</p>
+    <p class="footer__copyright">&copy;&nbsp;<script>document.write(new Date().getFullYear())</script>&nbsp;Anastasia Povarkova</p>
   </footer> 
 
   <template id="element-template">
